# back-end/app/routes/manufacturing.routes.js
@@ -1,10 +1,0 @@
-module.exports = app => {
-    const manufacturing = require("../controllers/manufacturing.controller.js");
-
-    let router = require("express").Router();
-
-    // Retrieve all manufacturing
-    router.get("/", manufacturing.findAll);
-
-    app.use('/api/manufacturing', router);
-};
